<resources>
    <string name="app_name">IndoQuest</string>
    <string name="title_home">Home</string>
    <string name="title_explore">Explore</string>
    <string name="title_hidden_gem">HiddenGem</string>
    <string name="title_quest_share">QuestShare</string>
    <string name="title_profile">Profile</string>
    <string name="next">next</string>
    <string name="title_onboarding_1">Explorasi Keindahan Bali Bersama Kami</string>
    <string name="title_page">Welcome to</string>
    <string name="login_subtitle_page">Login to your account
    and start planning your travel route.</string>
    <string name="signup_subtitle_page">Create your new account
    and start a wonderful journey.</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="remember_my_password">Remember my password</string>
    <string name="forgot_password">forgot password?</string>
    <string name="login">Login</string>
    <string name="don_t_have_accout">Don\'t have account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="indoquest_logo">indoquest logo</string>
    <string name="des_tab_title_1">Detail</string>
    <string name="des_tab_title_2">Reviews</string>
    <string name="check_location_now">Check Location now</string>
    <string name="search_your_destination_here">Search your destination here</string>
    <string name="user_tab_title_1">Post</string>
    <string name="user_tab_title_2">Destination</string>
    <string name="user_tab_title_3">HiddenGem</string>
    <string name="recommend_for_you">Recommend For You</string>
    <string name="view_detail">view detail</string>
    <string name="button">Button</string>
    <string name="detail_destination_fragment">Detail Destination Fragment</string>
    <string name="destination_image">Destination_image</string>
    <string name="back_to_home">back to home</string>
    <string name="add_comment_button">add comment button</string>
    <string name="hidden_gem">Hidden Gem</string>
    <string name="edit_profile">Edit profile</string>
    <string name="user_post_fragment">User Post Fragment</string>
    <string name="nama_tempat">Nama tempat</string>
    <string name="lokasi_tempat">Lokasi</string>
    <string name="kategori">Kategori</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="tips_and_trick">Tips and trick</string>
    <string name="send">Send</string>
    <string name="questshare">QuestShare</string>
    <string name="share_ceritamu_di_questshare">Share ceritamu di questshare!</string>
    <string name="fauzan_azima">Fauzan Azima</string>
    <string name="location">Location</string>
    <string name="judul_kegiatan">Judul Kegiatan</string>
    <string name="post">Post</string>
    <string name="masukkan_angka_dari_1_5">Masukkan angka dari 1-5</string>
    <string name="tambahkan_ulasan_anda">Tambahkan Ulasan Anda</string>
    <string name="back_to_detail_destination">back to detail destination</string>
    <string name="explore_your_destination">Explore your destination</string>
    <string name="logout">Logout</string>
    <string name="change_your_username_here">Change your username here</string>
    <string name="display_name">Display Name</string>
    <string name="save">Save</string>
    <string name="change_your_display_name_here">Change your display name here</string>
    <string name="address">Address</string>
    <string name="change_your_address_here">Change your address here</string>
    <string name="rating">Rating</string>
    <string name="add_hidden_gem">Add hidden gem</string>
    <string name="category">Category</string>
    <string name="input_the_location_here">Input the location here</string>
    <string name="description">Description</string>
    <string name="destination_name">Destination name</string>
    <string name="destination_location">Destination Location</string>
    <string name="detination_category">Detination Category</string>
    <string name="destination_description">Destination Description</string>
    <string name="add_image">Add Image</string>
    <string name="destination_tips_and_trick">Destination Tips and trick</string>
    <string name="title">Title</string>
    <string name="add_your_story">Add Your Story</string>
    <string-array name="data_name">
        <item>Ahmad Dahlan</item>
        <item>Ahmad Yani</item>
        <item>Sutomo</item>
        <item>Gatot Soebroto</item>
        <item>Ki Hadjar Dewantara</item>
        <item>Mohammad Hatta</item>
        <item>Soedirman</item>
        <item>Soekarno</item>
        <item>Soepomo</item>
    </string-array>
    <string-array name="data_description">
        <item>Salah seorang ulama dan khatib terkemuka di Masjid Besar Kasultanan Yogyakarta pada masa itu, dan ibu dari K.H. Ahmad Dahlan adalah puteri dari H. Ibrahim yang juga menjabat penghulu Kesultanan Ngayogyakarta Hadiningrat pada masa itu. KH. Ahmad Dahlan telah mempelopori kebangkitan ummat Islam untuk menyadari nasibnya sebagai bangsa terjajah yang masih harus belajar dan berbuat. </item>
        <item>Jenderal TNI Anumerta Ahmad Yani (juga dieja Achmad Yani; lahir di Purworejo, Jawa Tengah, 19 Juni 1922 – meninggal di Lubang Buaya, Jakarta, 1 Oktober 1965 pada umur 43 tahun) adalah komandan Tentara Nasional Indonesia Angkatan Darat, dan dibunuh oleh anggota Gerakan 30 September saat mencoba untuk menculik dia dari rumahnya.</item>
        <item>Sutomo (lahir di Surabaya, Jawa Timur, 3 Oktober 1920 – meninggal di Padang Arafah, Arab Saudi, 7 Oktober 1981 pada umur 61 tahun) lebih dikenal dengan sapaan akrab oleh rakyat sebagai Bung Tomo, adalah pahlawan yang terkenal karena peranannya dalam membangkitkan semangat rakyat untuk melawan kembalinya penjajah Belanda melalui tentara NICA, yang berakhir dengan pertempuran 10 November 1945 yang hingga kini diperingati sebagai Hari Pahlawan.</item>
        <item>Jenderal TNI (Purn.) Gatot Soebroto (lahir di Sumpiuh, Banyumas, Jawa Tengah, 10 Oktober 1907 – meninggal di Jakarta, 11 Juni 1962 pada umur 54 tahun) adalah tokoh perjuangan militer Indonesia dalam merebut kemerdekaan dan juga pahlawan nasional Indonesia. Ia dimakamkan di Ungaran, kabupaten Semarang.</item>
        <item>Raden Mas Soewardi Soerjaningrat (EBI: Suwardi Suryaningrat, sejak 1922 menjadi Ki Hadjar Dewantara, EBI: Ki Hajar Dewantara, beberapa menuliskan bunyi bahasa Jawanya dengan Ki Hajar Dewantoro; lahir di Pakualaman, 2 Mei 1889 – meninggal di Yogyakarta, 26 April 1959 pada umur 69 tahun; selanjutnya disingkat sebagai "Soewardi" atau "KHD") adalah aktivis pergerakan kemerdekaan Indonesia, kolumnis, politisi, dan pelopor pendidikan bagi kaum pribumi Indonesia dari zaman penjajahan Belanda. Ia adalah pendiri Perguruan Taman Siswa, suatu lembaga pendidikan yang memberikan kesempatan bagi para pribumi untuk bisa memperoleh hak pendidikan seperti halnya para priyayi maupun orang-orang Belanda.</item>
        <item>Dr.(HC) Drs. H. Mohammad Hatta (lahir dengan nama Mohammad Athar, dikenal sebagai Bung Hatta; lahir di Fort de Kock (sekarang Bukittinggi, Sumatera Barat), Hindia Belanda, 12 Agustus 1902 – meninggal di Jakarta, 14 Maret 1980 pada umur 77 tahun) adalah tokoh pejuang, negarawan, ekonom, dan juga Wakil Presiden Indonesia yang pertama. Ia bersama Soekarno memainkan peranan penting untuk memerdekakan bangsa Indonesia dari penjajahan Belanda sekaligus memproklamirkannya pada 17 Agustus 1945. Ia juga pernah menjabat sebagai Perdana Menteri dalam Kabinet Hatta I, Hatta II, dan RIS. Ia mundur dari jabatan wakil presiden pada tahun 1956, karena berselisih dengan Presiden Soekarno. Hatta juga dikenal sebagai Bapak Koperasi Indonesia.</item>
        <item>Jenderal Besar Raden Soedirman (EYD: Sudirman; lahir 24 Januari 1916 – meninggal 29 Januari 1950 pada umur 34 tahun) adalah seorang perwira tinggi Indonesia pada masa Revolusi Nasional Indonesia. Menjadi panglima besar Tentara Nasional Indonesia pertama, ia secara luas terus dihormati di Indonesia. Terlahir dari pasangan rakyat biasa di Purbalingga, Hindia Belanda, Soedirman diadopsi oleh pamannya yang seorang priyayi. Setelah keluarganya pindah ke Cilacap pada tahun 1916, Soedirman tumbuh menjadi seorang siswa rajin; ia sangat aktif dalam kegiatan ekstrakurikuler, termasuk mengikuti program kepanduan yang dijalankan oleh organisasi Islam Muhammadiyah. Saat di sekolah menengah, Soedirman mulai menunjukkan kemampuannya dalam memimpin dan berorganisasi, dan dihormati oleh masyarakat karena ketaatannya pada Islam. Setelah berhenti kuliah keguruan, pada 1936 ia mulai bekerja sebagai seorang guru, dan kemudian menjadi kepala sekolah, di sekolah dasar Muhammadiyah; ia juga aktif dalam kegiatan Muhammadiyah lainnya dan menjadi pemimpin Kelompok Pemuda Muhammadiyah pada tahun 1937. Setelah Jepang menduduki Hindia Belanda pada 1942, Soedirman tetap mengajar. Pada tahun 1944, ia bergabung dengan tentara Pembela Tanah Air (PETA) yang disponsori Jepang, menjabat sebagai komandan batalion di Banyumas. Selama menjabat, Soedirman bersama rekannya sesama prajurit melakukan pemberontakan, namun kemudian diasingkan ke Bogor.</item>
        <item>Dr.(H.C.) Ir. H. Soekarno (ER, EYD: Sukarno, nama lahir: Koesno Sosrodihardjo) (lahir di Surabaya, Jawa Timur, 6 Juni 1901 – meninggal di Jakarta, 21 Juni 1970 pada umur 69 tahun) adalah Presiden pertama Republik Indonesia yang menjabat pada periode 1945–1967. Ia memainkan peranan penting dalam memerdekakan bangsa Indonesia dari penjajahan Belanda. Ia adalah Proklamator Kemerdekaan Indonesia (bersama dengan Mohammad Hatta) yang terjadi pada tanggal 17 Agustus 1945. Soekarno adalah yang pertama kali mencetuskan konsep mengenai Pancasila sebagai dasar negara Indonesia dan ia sendiri yang menamainya.</item>
        <item>Prof. Mr. Dr. Soepomo (Ejaan Soewandi: Supomo; lahir di Sukoharjo, Jawa Tengah, 22 Januari 1903 – meninggal di Jakarta, 12 September 1958 pada umur 55 tahun) adalah seorang pahlawan nasional Indonesia. Soepomo dikenal sebagai arsitek Undang-undang Dasar 1945, bersama dengan Muhammad Yamin dan Soekarno.</item>
        <item>Prof. Mr. Dr. Soepomo (Ejaan Soewandi: Supomo; lahir di Sukoharjo, Jawa Tengah, 22 Januari 1903 – meninggal di Jakarta, 12 September 1958 pada umur 55 tahun) adalah seorang pahlawan nasional Indonesia. Soepomo dikenal sebagai arsitek Undang-undang Dasar 1945, bersama dengan Muhammad Yamin dan Soekarno.</item>
    </string-array>
    <string-array name="data_location">
        <item>Lombok Timur</item>
        <item>Lombok Barat</item>
        <item>Mataram</item>
        <item>Denpasar</item>
        <item>Kuta Selatan</item>
        <item>Bali Utara</item>
        <item>Kuta Barat</item>
        <item>Lombok Tengah</item>
        <item>Padang Bai</item>
        <item>Denpasar</item>
    </string-array>
    <string-array name="data_rate">
        <item>4.2</item>
        <item>4.9</item>
        <item>5.0</item>
        <item>4.7</item>
        <item>4.5</item>
        <item>4.8</item>
        <item>4.3</item>
        <item>4.4</item>
        <item>4.0</item>
        <item>4.2</item>
    </string-array>
    <string-array name="data_title_qs">
        <item>Jalan-jalan ke Bali</item>
        <item>Liburan dluu</item>
        <item>Ini gabut doangg</item>
    </string-array>
    <string-array name="data_username_qs">
        <item>Fauzan Azima</item>
        <item>Khairunnisa Fitriani</item>
        <item>Muhammad Wildan</item>
    </string-array>
    <string-array name="data_location_qs">
        <item>Mataram</item>
        <item>Lombok Tengah</item>
        <item>Sekotong</item>
    </string-array>
    <string name="normal">Normal</string>
    <string name="satelite">Satelite</string>
    <string name="terrain">Terrain</string>
    <string name="hybrid">Hybrid</string>
</resources>