<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    tools:context=".ui.addstory.AddStoryActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/destination_image"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_close" />

        <TextView
            android:id="@+id/tv_login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_your_story"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="16sp"
            android:textStyle="normal"/>
    </FrameLayout>

    <FrameLayout
        android:id="@id/add_img"
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:layout_height="155dp"
        android:background="@drawable/rounded_border_add_photo"
        android:gravity="center">
        <ImageView
            android:layout_gravity="center"
            android:id="@+id/iv_add_img"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/baseline_add_image" />
    </FrameLayout>

    <TextView
        android:id="@+id/tv_add_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/add_image" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/title" />

    <EditText
        android:id="@+id/nama_lokasi"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:hint="Story title"
        android:inputType="textPersonName"/>

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/description" />

    <EditText
        android:id="@+id/et_des"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="8dp"
        android:hint="Story Description"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:lines="8"
        android:fontFamily="@font/poppins"
        />

    <Button
        android:id="@+id/btn_submit"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/post"
        android:fontFamily="@font/poppins"
        android:textAllCaps="false"
        android:backgroundTint="@color/grey800"
        />
</LinearLayout>