<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp"
    xmlns:tools="http://schemas.android.com/tools"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="57dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/destination_image"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_cross" />
            <TextView
                android:id="@+id/tv_login_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tambahkan hidden gem"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_semibold"
                android:layout_marginStart="58dp"
                android:textSize="16sp"
                android:layout_marginTop="0dp"
                android:textStyle="normal"/>
        </LinearLayout>

        <FrameLayout
            android:id="@id/add_img"
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:layout_height="155dp"
            android:background="@drawable/rounded_border_add_photo"
            android:gravity="center">
            <ImageView
                android:layout_gravity="center"
                android:id="@+id/iv_add_img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/baseline_add_image" />
        </FrameLayout>

        <EditText
            android:id="@+id/nama_lokasi"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nama_tempat"
            android:fontFamily="@font/poppins"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:background="@drawable/input_text_background"/>

        <EditText
            android:id="@+id/et_lokasi"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lokasi_tempat"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:fontFamily="@font/poppins"
            android:maxLines="1"
            android:background="@drawable/input_text_background"/>

        <EditText
            android:id="@+id/et_catogery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/kategori"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:fontFamily="@font/poppins"
            android:maxLines="1"
            android:background="@drawable/input_text_background"/>

        <EditText
            android:id="@+id/et_des"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="8dp"
            android:hint="@string/deskripsi"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:lines="8"
            android:padding="10dp"
            android:fontFamily="@font/poppins"
            android:background="@drawable/input_text_background"
            />

        <EditText
            android:id="@+id/et_tips_trick"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="8dp"
            android:hint="@string/tips_and_trick"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:lines="8"
            android:padding="10dp"
            android:fontFamily="@font/poppins"
            android:background="@drawable/input_text_background"
            />

        <FrameLayout
            android:id="@id/add_location_map"
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:layout_height="155dp"
            android:background="@drawable/rounded_border_add_photo"
            android:gravity="center">
            <ImageView
                android:layout_gravity="center"
                android:id="@+id/iv_add_map"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/baseline_add_image" />
        </FrameLayout>

        <Button
            android:id="@+id/btn_submit"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:fontFamily="@font/poppins"
            android:textAllCaps="false"
            />
    </LinearLayout>
</ScrollView>