<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.maps.MapsActivity">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.maps.MapsActivity" />

    <RadioGroup
        android:id="@+id/rg_map_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="4dp"
        map:layout_constraintBottom_toBottomOf="parent"
        map:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="6dp"
        android:layout_marginBottom="40dp"
        android:alpha="0.7">

        <RadioButton
            android:id="@+id/rb_normal"
            android:layout_height="30dp"
            android:layout_width="50dp"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins"
            android:textColor="@drawable/map_radio_type_text"
            android:background="@drawable/map_radio_type_background"
            android:text="@string/normal"
            android:checked="true"
            android:textSize="12sp"
            android:button="@null"
            />
        <RadioButton
            android:id="@+id/rb_satelite"
            android:layout_height="30dp"
            android:layout_width="50dp"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins"
            android:textColor="@drawable/map_radio_type_text"
            android:background="@drawable/map_radio_type_background"
            android:text="@string/satelite"
            android:textSize="12sp"
            android:button="@null"/>
        <RadioButton
            android:id="@+id/rb_terrain"
            android:layout_height="30dp"
            android:layout_width="50dp"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins"
            android:textColor="@drawable/map_radio_type_text"
            android:background="@drawable/map_radio_type_background"
            android:text="@string/terrain"
            android:textSize="12sp"
            android:button="@null"/>
        <RadioButton
            android:id="@+id/rb_hybrid"
            android:layout_height="30dp"
            android:layout_width="50dp"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins"
            android:textColor="@drawable/map_radio_type_text"
            android:background="@drawable/map_radio_type_background"
            android:text="@string/hybrid"
            android:textSize="12sp"
            android:button="@null"/>
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>